// Generated by protostruct-gen. You may edit this file in specific ways that
// will be preserved. See the protostruct documentation for more details.

syntax = "proto3";
import "tangent/protostruct/descriptor_extensions.proto";
package tangent.test;

option (protostruct.fileopts).header_filepath = "tangent/protostruct/test/test_messages.h";


/// This is enum "A"
enum MyEnumA {
  MyEnumA_VALUE1 = 0;  //!< value 1
  MyEnumA_VALUE2 = 1;  //!< value 2
  MyEnumA_VALUE3 = 2;  //!< value 3
}

/// This is message "A"
message MyMessageA {
   sint32 fieldA = 1;  //!< field A
   double fieldB = 2;  //!< field B
   uint64 fieldC = 3;  //!< field C
  MyEnumA fieldD = 4;  //!< field D
}

/// This is message "B"
message MyMessageB {
  reserved 1, 3, 8, 12 to 13, 2, 4, 7;
  MyMessageA fieldA = 5;  //!< field A
}

/// This is message "C"
message MyMessageC {
  reserved 1;
  repeated MyMessageA fieldA = 3 [(protostruct.fieldopts).capacity=10];
  repeated      int32 fieldB = 2 [(protostruct.fieldopts).capacity=12];
}


